@@ -23,6 +23,7 @@ apport (0.70) UNRELEASED; urgency=low
     - Link launchpad-crash-digger into the retracer's bin/ dir.
   * run-tests: Run tests with python's -tt flag to catch whitespace errors.
   * Replace tabs with spaces in all Python files. (LP: #93561)
+  * Remove trailing white space in all Python files.
 
   [ Kees Cook ]
   * apport/report.py, add_proc_info(): If reading /proc/pid/maps fails,
@@ -47,7 +48,7 @@ apport (0.70) UNRELEASED; urgency=low
   * apport/ui.py, open_url(): Check that $DISPLAY is set before considering
     the KDE/Gnome web browsers.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 22 Mar 2007 10:13:50 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 22 Mar 2007 10:17:24 +0100
 
 apport (0.69) feisty; urgency=low
 
